# politicoresto-admin-mcp

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: check_no_service_role_key.py
src/politicoresto_mcp/: __init__.py  __main__.py  config.py  server.py  session.py  supabase_client.py
tests/: conftest.py  test_config.py  test_session.py  test_supabase_client.py  test_tools.py
